RESOLVED FIXED214199
[iOS] Prevent SPI clients from making the minimum layout height or width negative
https://bugs.webkit.org/show_bug.cgi?id=214199
Summary [iOS] Prevent SPI clients from making the minimum layout height or width nega...
Wenson Hsieh
Reported 2020-07-10 14:28:46 PDT
Attachments
Patch (4.70 KB, patch)
2020-07-10 14:43 PDT, Wenson Hsieh
thorton: review+
For EWS (4.72 KB, patch)
2020-07-10 14:56 PDT, Wenson Hsieh
no flags
Wenson Hsieh
Comment 1 2020-07-10 14:43:46 PDT
Tim Horton
Comment 2 2020-07-10 14:46:27 PDT
Comment on attachment 404003 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=404003&action=review > Source/WebKit/UIProcess/API/ios/WKWebViewIOS.mm:2947 > + NSLog(@"%s: Error: attempting to override layout parameters with negative width or height: %@", __PRETTY_FUNCTION__, NSStringFromCGSize(minimumLayoutSize)); os_log_error, maybe? or even os_log_fault? It is v. v. bad if we get here.
Wenson Hsieh
Comment 3 2020-07-10 14:47:20 PDT
(In reply to Tim Horton from comment #2) > Comment on attachment 404003 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=404003&action=review > > > Source/WebKit/UIProcess/API/ios/WKWebViewIOS.mm:2947 > > + NSLog(@"%s: Error: attempting to override layout parameters with negative width or height: %@", __PRETTY_FUNCTION__, NSStringFromCGSize(minimumLayoutSize)); > > os_log_error, maybe? or even os_log_fault? It is v. v. bad if we get here. os_log_fault it is!
Wenson Hsieh
Comment 4 2020-07-10 14:56:08 PDT
EWS
Comment 5 2020-07-10 17:30:29 PDT
Committed r264248: <https://trac.webkit.org/changeset/264248> All reviewed patches have been landed. Closing bug and clearing flags on attachment 404004 [details].
Note You need to log in before you can comment on or make changes to this bug.